<resources>
    <string name="app_name">Dagger2</string>
    <string name="wanandroid">wanandroid</string>
    <string name="login">登录</string>
    <string name="logout">退出</string>
    <string name="demo">Dagger 2 在android上应用的示例。</string>
    <string name="go_register">去注册</string>
    <string name="register">注册</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="hint_repwd">请再次输入密码</string>


</resources>
